--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,7 @@ dependencies {
 
     // optional - Guava support for Room, including Optional and ListenableFuture
     implementation "androidx.room:room-guava:$room_version"
+    implementation 'com.google.android.material:material:1.0.0'
 
     // Test helpers
     testImplementation "androidx.room:room-testing:$room_version"
